--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.deobfuscation.CompilationTest</mainClass>
+									<mainClass>com.deobfuscation.DeobfuscationDriver</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
